--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -324,6 +324,7 @@
     <Content Include="Views\Home\Signup.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
