--- a/Web.config
+++ b/Web.config
@@ -65,4 +65,6 @@
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
         </providers>
     </entityFramework>
-</configuration>
+<connectionStrings>
+	
+<add name="MobileShoppingEntities" connectionString="metadata=res://*/Models.Models.csdl|res://*/Models.Models.ssdl|res://*/Models.Models.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=msi;initial catalog=MobileShopping;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
